nivasa-macros/tests/trybuild/module_interceptor_empty.rs
use nivasa_macros::{interceptor, module};

#[module({})]
#[interceptor()]
struct AppModule;

fn main() {}
